Add new customer creation
